@@ -11,7 +11,7 @@ AC_CANONICAL_HOST
 AC_SUBST(ARCH, ${host_cpu})
 
 # Checks for programs.
-export CC="gcc -ffreestanding"
+export CC="gcc -g -ffreestanding"
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_INSTALL
